--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: java
 jdk:
 - openjdk8
 script: mvn clean verify
+deploy:
+  provider: heroku
+  api_key:
+    secure: 7da8f8d1-237f-4398-9134-8b8ad0f5dde9
